--- a/index.html
+++ b/index.html
@@ -170,17 +170,17 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead subhead--dark">Hello There</h3>
-                <h1 class="display-1 display-1--light">We Are Glint</h1>
+                <h3 class="subhead subhead--dark">HOLA !</h3>
+                <h1 class="display-1 display-1--light">Somos Aránzazu</h1>
             </div>
         </div> <!-- end section-header -->
 
         <div class="row about-desc" data-aos="fade-up">
             <div class="col-full">
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt. 
-                </p>
+                    Compañia que se dedica a la fabricación de los mejores vinagres. Nuestras variedades de Sidra de Manzana, está elaborada con las mejores manzanas y materia prima sin ﬁltrar y sin reﬁnar, llenos de bondad natural del vinagre, lo que signiﬁca que contiene todas las proteínas y bacterias que hacen que el vinagre sea saludable.                </p>
             </div>
+            <img src="./images/portfolio/image.png" alt="">
         </div> <!-- end about-desc -->
 
         <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
