actualizacion de info about us

--- a/index.html
+++ b/index.html
@@ -180,27 +180,31 @@
                 <p>
                     Compañia que se dedica a la fabricación de los mejores vinagres. Nuestras variedades de Sidra de Manzana, está elaborada con las mejores manzanas y materia prima sin ﬁltrar y sin reﬁnar, llenos de bondad natural del vinagre, lo que signiﬁca que contiene todas las proteínas y bacterias que hacen que el vinagre sea saludable.                </p>
             </div>
-            <img src="./images/portfolio/image.png" alt="">
-        </div> <!-- end about-desc -->
+            <img src="./images/portfolio/image.png" alt="" class="imgdesc">
+            <div class="col-full">
+                <p>
+                    Nuestra misión es garantizar el éxito continuo de nuestros clientes, empleados y comunidades mediante la fabricación de productos de alta calidad que generan Satisfacción de sus clientes, con la entrega de productos nutritivos que cumplen con los requisitos aplicables en la industria y requerimientos del mercado garantizando la satisfacción del cliente y cumpliendo con los requisitos de ley en términos de inocuidad, seguridad, medio ambiente y calidad. Se proyecta al 2026 como una empresa colombiana referente en la industria alimentaria, buscando siempre la satisfacción y el reconocimiento del cliente, mediante la experiencia y confiabilidad en cada proceso que realiza la compañía. 
+                </p>
+            </div>
+            <img src="./images/IMG_1700.jpg" alt="" class="imgdesc">
+        </div> 
+        <!-- end about-desc -->
 
         <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
                 
             <div class="col-block stats__col ">
-                <div class="stats__count">127</div>
-                <h5>Awards Received</h5>
+                <div class="stats__count">14000000</div>
+                <h5>Botellas despachadas.</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">1505</div>
-                <h5>Cups of Coffee</h5>
+                <div class="stats__count">3000</div>
+                <h5>Tiendas a Nivel Nacional.</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">109</div>
-                <h5>Projects Completed</h5>
+                <div class="stats__count">20000000</div>
+                <h5>COP en  ventas anuales.</h5>
             </div>
-            <div class="col-block stats__col">
-                <div class="stats__count">102</div>
-                <h5>Happy Clients</h5> 
-            </div>
+        
 
         </div> <!-- end about-stats -->
 
