--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">What We Do</h3>
+                <h3 class="subhead">Que Ofrecemos ?</h3>
                 <h1 class="display-2">We’ve got everything you need to launch and grow your business</h1>
             </div>
         </div> <!-- end section-header -->
@@ -228,7 +228,7 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-paint-brush"></i>
+                    <img src="./images/IMG_7415.png" alt="">
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Brand Identity</h3>
