--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <img src="./images/IMG_7415.png" alt="">
+                    <img src="./images/IMG_7415.png" alt="" class="productimg">
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Brand Identity</h3>
@@ -241,7 +241,7 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-group"></i>
+                    <img src="./images/vsm.png" alt="" class="productimg">
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Illustration</h3>
@@ -254,7 +254,7 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-megaphone"></i>
+                    <img src="./images/IMG_746.png" alt="" class="productimg">
                 </div>  
                 <div class="service-text">
                     <h3 class="h2">Marketing</h3>
