actualizacion ultimos productos

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-earth"></i>
+                    <img src="./images/IMG_74156.png" alt="" class="productimg">
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Web Design</h3>
@@ -280,7 +280,7 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon">
-                    <i class="icon-cube"></i>
+                    <img src="./images/cyder.png" alt="" class="productimg">
                 </div>
                 <div class="service-text">
                     <h3 class="h2">Packaging Design</h3>
@@ -291,15 +291,7 @@
                 </div>
             </div>
     
-            <div class="col-block service-item" data-aos="fade-up">
-                <div class="service-icon"><i class="icon-lego-block"></i></div>
-                <div class="service-text">
-                    <h3 class="h2">Web Development</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
-                    </p>
-                </div>
+            
             </div>
 
         </div> <!-- end services-list -->
